--- a/module6/styles/luka.css
+++ b/module6/styles/luka.css
@@ -114,6 +114,9 @@ ul li {
     img {
         display: none; /* AND YOU CAN MAKE THINGS DISAPPEAR WHEN NOT NEEDED */
     }
+     p{
+        display: none;
+    }
     
 
 }
