--- a/module6/styles/luka.css
+++ b/module6/styles/luka.css
@@ -1,6 +1,7 @@
 img		{ 
     max-width: 100%;
     float: left; 
+    border: 3px solid rgb(223, 192, 154);
     border-radius: 10%;
     position: static;
 }
