--- a/module6/styles/esme.css
+++ b/module6/styles/esme.css
@@ -5,6 +5,13 @@ img		{
     border-radius: 10px;
 }
 
+audio { 
+    width: 100%; 
+    min-width: 300px;
+    box-shadow: 10px 10px 1px 1px rgb(223, 192, 154);
+    border-radius: 90px;
+    }
+
 body{
     background-color: rgb(248, 220, 185);
 }
